--- a/xray_core/Cargo.toml
+++ b/xray_core/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT"
 
 [dependencies]
 futures = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
 
 [dev-dependencies]
 rand = "0.3"
